//@GeneratedCode
/*****************************************************************************************
  Please note that this file is regenerated each time it is generated
  and all your changes will be overwritten in this file.
  If you still want to make changes, you can do this in 2 ways:
  
  1. Use a 'partial class name' according to the following pattern:
  
  #if GENERATEDCODE_ON
  namespace_name {
    partial class ClassName
    {
      partial void BeforeExecute(ref bool handled)
      {
        //... do something
        handled = true;
      }
    }
   }
  #endif
  
  2. Change the label //@GeneratedCode to //@CustomizedCode, for example.
     Alternatively, you can also remove the label or give it a different name.
*****************************************************************************************/
namespace SEeToDoList.Common.Contracts.Data
{
    /// <summary>
    /// Generated by the generator.
    /// </summary>
    public partial interface ITdTask : CommonContracts.IIdentifiable
    {
        System.String Title { get; set; }
        System.String? Description { get; set; }
        System.DateTime? DueDate { get; set; }
        System.DateTime? CompletedOn { get; set; }
        System.Boolean IsCompleted { get; set; }
        System.Int32 Priority { get; set; }
        IdType TdListId { get; set; }
        /// <summary>
        /// Copies the properties of another object to this instance.
        /// </summary>
        /// <param name="other">The object to copy the properties from.</param>
        void CopyProperties(ITdTask other)
        {
            bool handled = false;
            BeforeCopyProperties(other, ref handled);
            if (handled == false)
            {
                ((CommonContracts.IIdentifiable)this).CopyProperties(other);
                Title = other.Title;
                Description = other.Description;
                DueDate = other.DueDate;
                CompletedOn = other.CompletedOn;
                IsCompleted = other.IsCompleted;
                Priority = other.Priority;
                TdListId = other.TdListId;
            }
            AfterCopyProperties(other);
        }
        /// <summary>
        /// This method is called before copying the properties of another object to the current instance.
        /// </summary>
        /// <param name="other">The object to copy the properties from.</param>
        /// <param name="handled">A boolean value that indicates whether the method has been handled.</param>
        partial void BeforeCopyProperties(ITdTask other, ref bool handled);
        /// <summary>
        /// This method is called after copying properties from another instance of the class.
        /// </summary>
        /// <param name="other">The other instance of the class from which properties were copied.</param>
        partial void AfterCopyProperties(ITdTask other);
    }
}
